# spoke

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  build  check_coverage  test.txt
.github/workflows/: ci.yml
examples/: simple.rs
src/: asserts.rs  body.rs  code_block.rs  consumer.rs  content.rs  equality.rs  error.rs  generator.rs  lib.rs  name.rs  named.rs  operand.rs  parse_rule.rs  parser.rs  right.rs  rule.rs  rules.rs  signature.rs  span_source.rs  spoke.rs  string_lit.rs  suite.rs  token.rs  token_helpers.rs  token_is.rs
src/parse/: anchor.rs  anchor_assert.rs  anchor_body.rs  anchor_parent.rs  anchor_suite.rs  assert.rs  assert_eq.rs  body.rs  finshed.rs  mod.rs  suite.rs
src/unit_tests/: asserts.rs  body.rs  mod.rs  name.rs  signature.rs  spoke.rs  suite.rs  testing_helpers.rs
