[package]
name = "spoke"
version = "0.0.3"
edition = "2024"
description = "[coming soon] Simplified unit testing for Rust."
license = "MIT"
authors = ["Duncan Kimpton"]
repository = "https://github.com/dgkimpton/spoke/tree/main"

[lib]
proc-macro = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[dependencies]
proc-macro2 = { version = "1", features=["span-locations", "proc-macro"]}
unicode-ident = {version = "1"}
#litrs = { version = "1", features = ["proc-macro2"] }
